Finished CH updates, X2 updates, and started HAWK log.

--- a/files/X2_f2.html
+++ b/files/X2_f2.html
@@ -118,22 +118,19 @@
 				<img class="featurette-image img-responsive center-block" 
 					style="padding-bottom: 20px"
 					src="../images/hpr_rockets/X2/Flight2/X2_F2_plot.png"
-					alt="Plot of launch 1 data">
+					alt="Plot of launch 2 data">
 				<p></p>
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #1 of the X2 was conducted at the <a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
-				Reaction Research Society</a> Mojave Test Area launch site. The launch was documented by a pad-side Go Pro video camera,
-				and still photos captured by Xavier Marshall on his camera. The rocket was named the X2 after the Bell X-1, and painted to mimic 
-				its namesake, because it was expected to be my first rocket to break the sound barrier. However, on the launch day I opted to put 
-				a less powerful motor in this rocket. The powerful J520 motor flew on my other rocket <a href="charlie_horse.html">Charlie Horse</a>
-				that day - a flight which became my first to break the sound barrier!</p>
-				<p>This was the first flight I've used with a Missileworks RRC3 dual deployment flight computer, and it performed exactly as 
-				expected.</p>
-				<p>The flight was a complete success! The drouge parachute deployed at apogee, the main parachute deployed 500 ft AGL, and the 
-				rocket was recovered with the only damage being a minor rash on the paint job and a new, thin layer of dust. I think it's looking 
-				better with these additions, personally.</p>
+				<p>Flight #2 of the X2 was conducted at the ROC <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a> 
+				launch site. The launch was documented by a cell phone video from the spectator area. A pad-side Go Pro video camera 
+				had been staged but it ran out of batteries before the launch took place. The launch took place during the Tripoli 
+				LDRS 40 event hosted by ROC, where an ice cream truck even made an appearance!</p>
+				<p>The payload bay carried a Missileworks RRC3 dual deployment flight computer, which performed as expected and 
+				without issues.</p>
+				<p>The flight was a success! The rocket was recovered without any damage. This was my first high-power launch of 
+				the LDRS 40 event, with the 15th flight of <a href="CH_f15.html">Charlie Horse</a> happening the day after.</p>
 			</div>
 		</div>
 		<hr class="featurette-divider">
@@ -183,7 +180,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2023 Keith Yoerg</p>
+			<p>&#169; 2024 Keith Yoerg</p>
 		</div>
 	</footer>
 	
