--- a/files/ch_f14.html
+++ b/files/ch_f14.html
@@ -119,7 +119,7 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #14 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a></td> 
+				<p>Flight #14 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a> 
 				launch site. A Go Pro camera was set up to take video beside the launch pad. The launch was documented by a 
 				pad-side Go Pro camera and a cell phone video from the spectator area. This launch took place on my birthday, 
 				which was a nice full-circle moment because Charlie Horse was originally meant to fly from ROC on my birthday 
