--- a/files/ch_f16.html
+++ b/files/ch_f16.html
@@ -146,7 +146,7 @@
 				<div style="max-width:900px; margin: 0 auto">
 					<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight16/CH_F16_pad.mov">
+						<source src="../images/hpr_rockets/charlie_horse/Flight16/CH_F16_pad.mp4">
 					</video>
 					</div>
 				</div>
