--- a/files/ch_f17.html
+++ b/files/ch_f17.html
@@ -145,7 +145,7 @@
 				<div style="max-width:900px; margin: 0 auto">
 					<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight17/CH_F17_pad.mov">
+						<source src="../images/hpr_rockets/charlie_horse/Flight17/CH_F17_pad.mp4">
 					</video>
 					</div>
 				</div>
