--- a/files/ch_f5.html
+++ b/files/ch_f5.html
@@ -118,7 +118,7 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #5 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a></td> 
+				<p>Flight #5 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a> 
 				launch site during the 2019 Tripoli National Sport Launch (NSL). Charlie Horse's second launch of the event was 
 				documented by a pad-side Go Pro camera, as well as a DJI Phantom II Drone hovering several hundred feet in the air. 
 				A combined video of these perspectives can be seen below.</p>
