--- a/files/hawk_log.html
+++ b/files/hawk_log.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>CH Flight 15 Report</title>
+		<title>The HAWK Launch Log</title>
 		
 		<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../css/standard.css">
@@ -51,25 +51,29 @@
 						href="rocketry.html">Rocketry
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="hpr.html">High Power Solids</a></li>
+							<li><a>High Power Solids</a></li>
 								<li style="padding-left: 15px">
-									<a href="charlie_horse.html">Charlie Horse Log</a>
+									<a href="charlie_horse.html">Charlie Horse</a>
+								</li>
+								<li class="active" style="padding-left: 15px">
+									<a href="#">The HAWK</a>
 								</li>
 								<li style="padding-left: 15px">
-									<a href="x2_log.html">X2 Log</a>
+									<a href="flightOn_log.html">Flight On!</a>
 								</li>
-							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
+								<li style="padding-left: 15px">
+									<a href="x2_log.html">X2</a>
+								</li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
-					</li>
 					</li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" 
 						href="hobbies.html">Other Interests
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
+							<li><a href="hobbies.html#Aviation">Aviation</a></li>
 							<li><a href="hobbies.html#3DPrint">3D Printing</a></li>
-							<li><a href="hobbies.html#Scuba">Scuba Diving</a></li>
 							<li><a href="hobbies.html#USCBand">USC Band</a></li>
 							<li><a href="hobbies.html#Homebrew">Brewing Beer</a></li>
 						</ul>
@@ -86,91 +90,38 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			<div class="row">
-				<div class="col-sm-2">
-				</div>
-				<div class="col-sm-2">
-					<a class="btn btn-lg btn-info" href="ch_f14.html" role="button">Previous</a>
-				</div>
-				<div class="col-sm-4">
-					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 15</h1>
-				</div>
-				<div class="col-sm-2">
-					<a class="btn btn-lg btn-info" href="ch_f16.html" role="button">Next</a>
-				</div>
-				<div class="col-sm-2">
-				</div>
-			</div>
+			<h1 style="padding-top: 15px;">The HAWK Log</h1>
 		</div>
-	</div>
-	
-	<!-- Report "Featurette" Section -->
-	<div class="container marketing">
-		<hr class="featurette-divider" id="Report">
-		<h2 class="featurette-heading">Report</h2>
-		<p class="lead">3,541 ft | Mach 0.51</p>
-		<div class="row featurette">
-			<div class="col-md-5 col-md-push-7">
-				<img class="featurette-image img-responsive center-block" 
-					style="padding-bottom: 20px"
-					src="../images/hpr_rockets/charlie_horse/Flight15/CH_F15_plot.png"
-					alt="Plot of launch 15 data">
-				<p></p>
-			</div>
-			<div class="col-md-7 col-md-pull-5">
-			<p><p/>
-				<p>Flight #15 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a> 
-				launch site. The launch was documented by a pad-side Go Pro camera and a cell phone video from the spectator
-				area. The launch took place during the Tripoli LDRS 40 event hosted by ROC, where an ice cream truck even 
-				made an appearance!</p>
-				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight and a Stratologger CF dual 
-				deployment flight computer which performed as expected and without issues.</p>
-				<p>Dimitri Timohovich attendend the launch event as well, and was a great help assisting in setup and recovery 
-				from the launch. The flight itself went quite well, the repairs to the fin damage from the previous flight 
-				were sufficient and the rocket weather-cocked into the wind quite well, flying straight otherwise. This was my 
-				second high-power launch of the LDRS 40 event, with the 2nd ever flight of the <a href="X2_f2.html">X2</a> 
-				happening the day before.</p>
-			</div>
-		</div>
-		<hr class="featurette-divider">
 	</div>
 	
 	<!-- Carousel -->
-	<div class="container marketing" id="Photos">
-		<h2 class="featurette-heading">Photos & Video</h2>
-	</div>
-	<div id="myCarousel" class="carousel slide" data-interval="false">
+	<div id="myCarousel" class="carousel slide" data-ride="carousel">
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+		</ol>
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
-			<div class="item active" style="max-width: 70%; margin: 0 auto; top: 50%">
-				<div style="max-width:900px; margin: 0 auto">
-					<div class="embed-responsive embed-responsive-16by9">
-					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight15/CH_F15_Pad.mp4">
-					</video>
+			<div class="item active">
+				<img class="first-slide" src="../images/hpr_rockets/hawk/Flight1/HWK_F1_pad.gif" alt="Launch 1 GIF">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="hwk_f1.html" role="button">Flight 1</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<div style="max-width:900px; margin: 0 auto">
-					<div class="embed-responsive embed-responsive-16by9">
-					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight15/CH_F15_spectator.mp4">
-					</video>
+				<img class="second-slide" src="../images/hpr_rockets/hawk/Flight2/HWK_F2_photo4.png" alt="Launch 2 photo">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="hwk_f2.html" role="button">Flight 2</a></p>
 					</div>
 				</div>
-			</div>
-			<div class="item">
-				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight15/CH_F15_photo2.jpg" 
-					alt="Photo of Lynq GPS module being installed in Charlie Horse">
-			</div>
-			<div class="item">
-				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight15/CH_F15_photo3.jpg" 
-					alt="Photo of Charlie Horse's landing site">
 			</div>
 		</div>
-		
-		<!-- Left/Right Controls -->
+			
+	  <!-- Left/Right Controls -->
 		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
 			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 			<span class="sr-only">Previous</span>
@@ -181,6 +132,63 @@
 		</a>
 	</div>
 	
+	<!-- "Featurette" Section -->
+	<div class="container marketing">
+		<hr class="featurette-divider" id="Charlie">
+		<h3 class="featurette-heading">The HAWK's Story</h2>
+		<p>I built this rocket in 2020 during the depths of the COVID-19 pandemic shutdowns. It 
+		was built from a LOC Sandhawk kit that my dad had purchased for me at a 
+		<a href="https://rocstock.org/" target="_blank">ROC</a> launch event several years prior. 
+		X2 was intended to be the first rocket I flew faster than Mach 1, as it has the same 38-mm 
+		motor mount as <a href="charlie_horse.html">Charlie Horse</a> but the airframe diameter is 
+		roughly half the size.</p>
+		<p>Because it was meant to be my first breach of the speed of sound, 
+		I named her the "X2" and copied the paint scheme of the Bell X-1 "Glamorous Glennis", the 
+		first aircraft to travel faster than Mach 1. Despite the intentions on the first launch of X2 
+		I launched Charlie Horse on a 6-grain XL motor (which I had used once before, reaching only Mach 
+		0.72) and exceeded Mach 1, making the paint and naming scheme a bit less symbolic than I had 
+		initially intended.</p>
+		<p>More details from each flight including data plots, photos, and videos are available 
+		in the links below. A description and photos of each flight can be accessed by clicking on 
+		the links in the Launch # column below.</p>
+		<p class="lead"></p>
+		<div class="row featurette">
+			<div class="table-responsive">
+			<table class="table">
+				<thead>
+				<tr>
+				  <th scope="col">Launch #</th>
+				  <th scope="col">Date</th>
+				  <th scope="col">Motor</th>
+				  <th scope="col">Location</th>
+				  <th scope="col">Max Alt (ft)</th>
+				  <th scope="col">Mach</th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr>
+				  <th scope="row"><a href="X2_f2.html">2</a></th>
+				  <td>6/10/2022</td>
+				  <td>CTI J520-Skid</td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
+				  <td>4,724</td>
+				  <td>0.81</td>
+				</tr>
+				<tr>
+				  <th scope="row"><a href="X2_f1.html">1</a></th>
+				  <td>11/7/2020</td>
+				  <td>CTI I287-SS</td>
+				  <td><a href="http://www.rrs.org/facilities/" target="_blank">MTA</a></td>
+				  <td>2,535</td>
+				  <td>0.46</td>
+				</tr>
+				</tbody>
+			</table>
+			</div>
+		</div>
+		<hr class="featurette-divider">
+	</div>
+	
 	<!-- Return to Top -->
 	<p class="center"><a href="#top">Return to Top</a></p>
 	<br>
@@ -188,7 +196,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2023 Keith Yoerg</p>
+			<p>&#169; 2024 Keith Yoerg</p>
 		</div>
 	</footer>
 	
