--- a/files/x2_log.html
+++ b/files/x2_log.html
@@ -112,7 +112,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/X2/Flight2/X2_F2_photo2.jpg" alt="Launch 2 GIF">
+				<img class="second-slide" src="../images/hpr_rockets/X2/Flight2/X2_F2_photo2.jpg" alt="Launch 2 Photo">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="X2_f2.html" role="button">Flight 2</a></p>
@@ -134,9 +134,24 @@
 	
 	<!-- "Featurette" Section -->
 	<div class="container marketing">
-		<hr class="featurette-divider" id="X2">
-		<h2 class="featurette-heading">Summary</h2>
-		<p class="lead">Click buttons above or links below for detailed info</p>
+		<hr class="featurette-divider" id="Charlie">
+		<h3 class="featurette-heading">X2's Story</h2>
+		<p>I built this rocket in 2020 during the depths of the COVID-19 pandemic shutdowns. It 
+		was built from a LOC Sandhawk kit that my dad had purchased for me at a 
+		<a href="https://rocstock.org/" target="_blank">ROC</a> launch event several years prior. 
+		X2 was intended to be the first rocket I flew faster than Mach 1, as it has the same 38-mm 
+		motor mount as <a href="charlie_horse.html">Charlie Horse</a> but the airframe diameter is 
+		roughly half the size.</p>
+		<p>Because it was meant to be my first breach of the speed of sound, 
+		I named her the "X2" and copied the paint scheme of the Bell X-1 "Glamorous Glennis", the 
+		first aircraft to travel faster than Mach 1. Despite the intentions on the first launch of X2 
+		I launched Charlie Horse on a 6-grain XL motor (which I had used once before, reaching only Mach 
+		0.72) and exceeded Mach 1, making the paint and naming scheme a bit less symbolic than I had 
+		initially intended.</p>
+		<p>More details from each flight including data plots, photos, and videos are available 
+		in the links below. A description and photos of each flight can be accessed by clicking on 
+		the links in the Launch # column below.</p>
+		<p class="lead"></p>
 		<div class="row featurette">
 			<div class="table-responsive">
 			<table class="table">
@@ -148,27 +163,24 @@
 				  <th scope="col">Location</th>
 				  <th scope="col">Max Alt (ft)</th>
 				  <th scope="col">Mach</th>
-				  <th scope="col">More Info</th>
 				</tr>
 				</thead>
 				<tbody>
 				<tr>
-				  <th scope="row">2</th>
+				  <th scope="row"><a href="X2_f2.html">2</a></th>
 				  <td>6/10/2022</td>
 				  <td>CTI J520-Skid</td>
 				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>4,724</td>
 				  <td>0.81</td>
-				  <td><a href="X2_f2.html">Report & Photos</a></td>
 				</tr>
 				<tr>
-				  <th scope="row">1</th>
+				  <th scope="row"><a href="X2_f1.html">1</a></th>
 				  <td>11/7/2020</td>
 				  <td>CTI I287-SS</td>
 				  <td><a href="http://www.rrs.org/facilities/" target="_blank">MTA</a></td>
 				  <td>2,535</td>
 				  <td>0.46</td>
-				  <td><a href="X2_f1.html">Report & Photos</a></td>
 				</tr>
 				</tbody>
 			</table>
@@ -184,7 +196,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2020 Keith Yoerg</p>
+			<p>&#169; 2024 Keith Yoerg</p>
 		</div>
 	</footer>
 	
