--- a/files/ch_f1.html
+++ b/files/ch_f1.html
@@ -110,7 +110,7 @@
 		<p class="lead">Tripoli Level 1 Certification Flight</p>
 		<div class="row featurette" style="width: 90%; padding-left:15px">
 			<p><p/>
-				<p>Flight #1 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a></td> 
+				<p>Flight #1 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a> 
 				launch site and was used to successfully earn me a level 1 certification with the Tripoli Rocketry Association. 
 				A video of the launch was recorded with a cell phone and can be seen below.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has since flown on every flight of this rocket. The parachute 
