--- a/files/ch_f18.html
+++ b/files/ch_f18.html
@@ -114,23 +114,23 @@
 				<img class="featurette-image img-responsive center-block" 
 					style="padding-bottom: 20px"
 					src="../images/hpr_rockets/charlie_horse/Flight18/CH_F18_plot.png"
-					alt="Plot of launch 17 data">
+					alt="Plot of launch 18 data">
 				<p></p>
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #11 was conducted at the <a href="http://www.rrs.org/" target="_blank" data-toggle="tooltip" title="www.rrs.org">
-				Reaction Research Society</a> Mojave Test Area launch site. The launch was documented by a pad-side Go Pro camera and
-				an onboard camera (which was lost in flight), and cell phone footage recorded on Keith's phone by RRS member Wolfram
-				Blume.</p>
+				<p>Flight #18 was conducted at the ROC <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a> 
+				launch site. The launch was documented by a pad-side Go Pro camera and a cell phone video from the spectator
+				area. Ivan DeDios was also at the launch and it was the first rocket launch that Ash Hawn ever attended! The launch 
+				date also coincided with a partial solar eclipse; which was not only fun to see, but also provided a bit of respite 
+				from the hot desert sun during the earlier parts of the day.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, a Stratologger CF dual deployment 
-				flight computer, and was the first flight with the Lynq real-time GPS distance & direction trackers. The GPS signal is 
-				sent from the carabiner-style module in the rocket to an identical one on the ground. The module inside the rocket was 
-				covered in painter's tape to protect it from the hot exhaust gases of the ejection charge.</p>
-				<p>The flight was a success, and was my first flight over Mach 1.0! Unfortunately, the onboard camera was lost in 
-				flight. I have flown the camera many times before without issue, so I suspect the mach transition caused too much 
-				drag for it to hold on. The Lynq trackers were a resounding success, and made tracking the rocket 0.75 miles away 
-				very easy.</p>
+				flight computer, and some additional goodies to commemorate the 18th flight: a lottery scratcher, a cigarillo, and 
+				a Playboy Magazine cover (staples of any 18th celebration).</p>
+				<p>The flight was successful, even though the lottery ticket didn't end up being a winner. In similar, "less than 
+				victorious" fashion, I challenged Ivan to a drag race later in the day with his rocket against the 4th flight of 
+				<a href="FO_f4.html">Flight On!</a>. Unfortunately, Ivan's rocket left the pad first but with how great the day 
+				was, I think we were all winners.</p>
 			</div>
 		</div>
 		<hr class="featurette-divider">
@@ -147,7 +147,7 @@
 				<div style="max-width:900px; margin: 0 auto">
 					<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
-						<source src="../images/hpr_rockets/charlie_horse/Flight18/CH_F18_pad.mov">
+						<source src="../images/hpr_rockets/charlie_horse/Flight18/CH_F18_pad.mp4">
 					</video>
 					</div>
 				</div>
