--- a/files/ch_f9.html
+++ b/files/ch_f9.html
@@ -118,7 +118,7 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #9 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a></td> 
+				<p>Flight #9 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a> 
 				launch site. A Go Pro camera was set up to take video beside the launch pad. The first attempt at a launch burned 
 				the igniter without starting the motor, which was recorded by the Go Pro. Unfortunately there was a malfunction 
 				when starting the camera for the second, successful launch attempt so no pad-side footage was recorded of the launch. The only  
