--- a/files/fam_history.html
+++ b/files/fam_history.html
@@ -102,7 +102,7 @@
 	
 	<!-- "Featurette" Section -->
 	<div class="container marketing">
-		<hr class="featurette-divider">
+		<hr class="featurette-divider" id="Wright">
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading">The World's First Flight</h2>
@@ -121,7 +121,7 @@
 			</div>
 		</div>
 	
-		<hr class="featurette-divider" id="TAM">
+		<hr class="featurette-divider" id="beer">
 		<div class="row featurette">
 			<div class="col-md-7 col-md-push-5">
 				<h2 class="featurette-heading">Minnesota's First Brewery</h2>
@@ -146,7 +146,7 @@
 			</div>
 		</div>
 		
-		<hr class="featurette-divider" id="website">
+		<hr class="featurette-divider" id="engineers">
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading">Engineering Heritage</h2>
