--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2024 Keith Yoerg TEST</p>
+			<p>&#169; 2024 Keith Yoerg</p>
 		</div>
 	</footer>
 	
